# KBIPrototype

./: .gitignore  justfile
kbi/: README.md  pyproject.toml  test.ipynb  test.py
kbi/.ipynb_checkpoints/: test-checkpoint.ipynb
kbi/kbi/: __init__.py  catalog_manager.py  kedro_magic.py  parameter_manager.py  pipeline_interactive_builder.py  pipeline_manager.py
kbi/kbi/templates/: kedro_config.yaml  project_catalog.pytemplate  project_parameters.pytemplate  project_pipelines_nodes.pytemplate  project_pipelines_pipeline.pytemplate
notebooks/: test.ipynb
